refactor: update to latest change #196